@@ -1,0 +1,11 @@
+/* pyxed - Python bindings for Intel's XED2
+ * huku <huku@grhack.net>
+ *
+ * encoder.c - Exports class `Encoder', the main encoder object.
+ */
+#include "includes.h"
+#include "pyxed.h"
+#include "check.h"
+#include "encoder.h"
+#include "instruction.h"
+
