@@ -1,0 +1,8 @@
+#ifndef _ENCODER_H_
+#define _ENCODER_H_
+
+#include "includes.h"
+
+
+
+#endif /* _ENCODER_H_ */
